completed product page test Scripts

--- a/src/main/resources/testData/products.properties
+++ b/src/main/resources/testData/products.properties
@@ -1,3 +1,20 @@
-#create new products
+#create new product
 Product_name = playproduct
-Product_description = this is play product
+Product_description = This is play product
+Product_Type = IoT Application
+Product_Status = Suspended
+Product_Vno = 2.1
+Product_tier = Tier 1
+Product_class = Software only
+Product_TagKey = playproductKey
+Product_TagValue = play123
+Product_Dependency = play_depend
+
+#Create new sub product
+Subproduct_name = playsub_product
+Subproduct_description = This is play sub product
+Subproduct_Type = System Applications
+Subproduct_status = Suspended
+Subproduct_Vno = 3.1
+Subproduct_tier = Tier 1
+Subproduct_depenecy = playsub_product
