completed product page test Scripts

--- a/src/main/resources/testData/products.properties
+++ b/src/main/resources/testData/products.properties
@@ -8,7 +8,7 @@ Product_tier = Tier 1
 Product_class = Software only
 Product_TagKey = playproductKey
 Product_TagValue = play123
-Product_Dependency = play_depend
+Product_Dependency = cplay_depend
 
 #Create new sub product
 Subproduct_name = playsub_product
@@ -18,3 +18,11 @@ Subproduct_status = Suspended
 Subproduct_Vno = 3.1
 Subproduct_tier = Tier 1
 Subproduct_depenecy = playsub_product
+
+
+#Product Team details
+
+Team_Name = play
+Team_Description = This is play Team
+Team_Members = Madhusudhan  KN,Punith Kumar T G
+Team_Business_Unit = BU 1
